--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,6 +22,10 @@
             30
         </session-timeout>
     </session-config>
+    <error-page> 
+        <error-code>404</error-code>
+        <location>/404.xhtml</location>
+    </error-page>
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
